fix some layout issues in older versions of ie

--- a/app/styles/_bootstrap-override.scss
+++ b/app/styles/_bootstrap-override.scss
@@ -1,3 +1,17 @@
+main {
+  &.container {
+    margin-left: 65px;
+    margin-right: 65px;
+  }
+}
+
+.container {
+  &.small-title {
+    margin-left: 65px;
+    margin-right: 65px;
+  }
+}
+
 .modal-open {
   //forced to use this -- weird Bootstrap behavior
   padding-right: 0 !important;
